Preview of analysis

--- a/dinoflux/dinoflux.conf
+++ b/dinoflux/dinoflux.conf
@@ -19,6 +19,7 @@ Service dinoflux_module dinoflux.so
 #dinoflux.MyConfig param1 param2
 
 dinoflux.DinofluxConfig 5.9.23.53
+dinoflux.DinofluxExtensions exe,pdf,swf 
 
 # End module: dinoflux
 
